--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
 
@@ -29,5 +27,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src", "eslint.config.ts"]
+  "include": ["src"]
 }
