--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@swc/core": "^1.15.3",
-    "@types/bun": "latest",
+    "@types/node": "^25.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
