--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "jsdoc-example-runner",
-  "module": "index.js",
   "type": "module",
   "version": "1.0.0",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "author": {
     "name": "Shoghy Martinez"
   },
@@ -14,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Shoghy/jsdoc-example-runner"
+    "url": "git+https://github.com/Shoghy/jsdoc-example-runner.git"
   },
   "scripts": {
     "build": "tsup"
